# CppUtils

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Results.txt  docker-compose.yml  testTest.cpp
.github/workflows/: cpp.yml
src/: Math.hpp  OstreamRedirector.hpp  Vector.hpp  VectorContainer.hpp  VectorTuple.hpp  VectorTupleHelpers.hpp
src/ecs/: SlotMap.hpp  SlotMapInterface.hpp  UnorderedMapSlotMap.hpp
test/: testMath.cpp  testOstreamRedirector.cpp  testVector.cpp  testVectorTuple.cpp
tests/: testMath.cpp  testOstreamRedirector.cpp  testVector.cpp  testVectorStaticAsserts.cpp
tests/[unused]ecs/: testUnorderedMapSlotMap.cpp
tests/ecs/: testUnorderedMapSlotMap.cpp
